--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@ window_padding_width 0 6
 map kitty_mod+r set_tab_title
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
 
+# window と タブ でできる限り操作を合わせる
 map kitty_mod+n new_window
 map kitty_mod+w close_window
-
 map kitty_mod+ctrl+n new_tab
 map kitty_mod+ctrl+w close_tab
 map kitty_mod+ctrl+1 goto_tab 1
@@ -22,6 +22,8 @@ map kitty_mod+ctrl+7 goto_tab 7
 map kitty_mod+ctrl+8 goto_tab 8
 map kitty_mod+ctrl+9 goto_tab 9
 
+# 検索
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 
 # 以下デフォの設定
 # vim:fileencoding=utf-8:foldmethod=marker
