--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,22 +8,34 @@ map kitty_mod+r set_tab_title
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
 
 # window と タブ でできる限り操作を合わせる
-map kitty_mod+n new_window
-map kitty_mod+w close_window
-map kitty_mod+ctrl+n new_tab
-map kitty_mod+ctrl+w close_tab
-map kitty_mod+ctrl+1 goto_tab 1
-map kitty_mod+ctrl+2 goto_tab 2
-map kitty_mod+ctrl+3 goto_tab 3
-map kitty_mod+ctrl+4 goto_tab 4
-map kitty_mod+ctrl+5 goto_tab 5
-map kitty_mod+ctrl+6 goto_tab 6
-map kitty_mod+ctrl+7 goto_tab 7
-map kitty_mod+ctrl+8 goto_tab 8
-map kitty_mod+ctrl+9 goto_tab 9
+map cmd+ctrl+n new_window
+map cmd+ctrl+w close_window
+map cmd+ctrl+1 first_window
+map cmd+ctrl+2 second_window
+map cmd+ctrl+3 third_window
+map cmd+ctrl+4 fourth_window
+map cmd+ctrl+5 fifth_window
+map cmd+ctrl+6 sixth_window
+map cmd+ctrl+7 seventh_window
+map cmd+ctrl+8 eighth_window
+map cmd+ctrl+9 ninth_window
+map cmd+ctrl+0 tenth_window
+
+map cmd+n new_tab
+map cmd+w close_tab
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+map cmd+0 goto_tab 10
 
 # 検索
-map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 
 # 以下デフォの設定
 # vim:fileencoding=utf-8:foldmethod=marker
