feat: add completion

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ map kitty_mod+r set_tab_title
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
 
 # window と タブ でできる限り操作を合わせる
-map cmd+ctrl+n new_window
+map cmd+ctrl+n new_window_with_cwd
 map cmd+ctrl+w close_window
 map cmd+ctrl+1 first_window
 map cmd+ctrl+2 second_window
@@ -33,6 +33,8 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+0 goto_tab 10
+map kitty_mod+right move_tab_forward
+map kitty_mod+left move_tab_backward
 
 # 検索
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
