--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,6 +20,8 @@ map cmd+ctrl+7 seventh_window
 map cmd+ctrl+8 eighth_window
 map cmd+ctrl+9 ninth_window
 map cmd+ctrl+0 tenth_window
+map cmd+ctrl+shift+right move_window_forward
+map cmd+ctrl+shift+left move_window_backward
 
 map cmd+n new_tab
 map cmd+w close_tab
@@ -33,8 +35,8 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+0 goto_tab 10
-map kitty_mod+right move_tab_forward
-map kitty_mod+left move_tab_backward
+map cmd+shift+right move_tab_forward
+map cmd+shift+left move_tab_backward
 
 # 検索
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
