feat: add start_resizing_window

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,6 +22,7 @@ map cmd+ctrl+9 ninth_window
 map cmd+ctrl+0 tenth_window
 map cmd+ctrl+shift+right move_window_forward
 map cmd+ctrl+shift+left move_window_backward
+map cmd+ctrl+r start_resizing_window
 
 map cmd+n new_tab
 map cmd+w close_tab
